# hybrid-kyber-communication-channel

./: Cargo.toml  Readme.MD
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: aead.rs  hkdf.rs  kyber.rs  lib.rs  traits.rs  x25519.rs
crates/crypto/tests/: aead.rs  hkdf.rs  kyber.rs  x25519.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: framing.rs  handshake.rs  lib.rs  messages.rs  session.rs  transcript.rs
crates/protocol/tests/: handshake.rs  messages.rs  session.rs  transcript.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
