[package]
name = "hybrid-kyber-crypto"
version.workspace = true
edition.workspace = true

[dependencies]
pqcrypto-kyber.workspace = true
pqcrypto-traits.workspace = true
x25519-dalek.workspace = true
chacha20poly1305.workspace = true
aes-gcm.workspace = true
sha2.workspace = true
hkdf.workspace = true
rand.workspace = true
zeroize.workspace = true
serde.workspace = true
thiserror.workspace = true
