[package]
name = "hybrid-kyber-protocol"
version.workspace = true
edition.workspace = true

[dependencies]
crypto.workspace = true
serde.workspace = true
bincode.workspace = true
tokio.workspace = true
rand.workspace = true
zeroize.workspace = true
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true
