[package]
name = "hybrid-kyber-protocol"
version.workspace = true
edition.workspace = true

[dependencies]
crypto.workspace = true
pqcrypto-kyber.workspace = true
pqcrypto-traits.workspace = true
x25519-dalek.workspace = true
serde.workspace = true
bincode.workspace = true
postcard.workspace = true
tokio.workspace = true
rand.workspace = true
zeroize.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true
